--- a/application/admin/view/otc/account/add.html
+++ b/application/admin/view/otc/account/add.html
@@ -15,13 +15,31 @@
     <div class="form-group">
         <label for="ifsc" class="control-label col-xs-12 col-sm-2">银行编码:</label>
         <div class="col-xs-12 col-sm-8">
-            <input type="text" class="form-control" id="ifsc" name="row[ifsc]" placeholder="" value="" data-rule="required" />
+            <input type="text" class="form-control" id="ifsc" name="row[ifsc]" placeholder="" value="" />
         </div>
     </div>
     <div class="form-group">
-        <label for="pkg" class="control-label col-xs-12 col-sm-2">包名:</label>
+        <label for="email" class="control-label col-xs-12 col-sm-2">email:</label>
         <div class="col-xs-12 col-sm-8">
-            <input type="text" class="form-control" id="pkg" name="row[pkg]" placeholder="" value=""  />
+            <input type="text" class="form-control" id="email" name="row[email]" placeholder="" value=""  />
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="password" class="control-label col-xs-12 col-sm-2">password:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input type="text" class="form-control" id="password" name="row[password]" placeholder="" value=""  />
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="host" class="control-label col-xs-12 col-sm-2">host:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input type="text" class="form-control" id="host" name="row[host]" placeholder="" value="imap.zoho.com"  />
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="port" class="control-label col-xs-12 col-sm-2">port:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input type="text" class="form-control" id="port" name="row[port]" placeholder="" value="993"  />
         </div>
     </div>
     <div class="form-group">
