--- a/application/admin/view/otc/bank/add.html
+++ b/application/admin/view/otc/bank/add.html
@@ -18,12 +18,12 @@
             <input type="text" class="form-control" id="ifsc" name="row[ifsc]" placeholder="" value="" data-rule="required" />
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label for="pkg" class="control-label col-xs-12 col-sm-2">包名:</label>
         <div class="col-xs-12 col-sm-8">
             <input type="text" class="form-control" id="pkg" name="row[pkg]" placeholder="" value=""  />
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label for="day_limit" class="control-label col-xs-12 col-sm-2">每日上限:</label>
         <div class="col-xs-12 col-sm-8">
