--- a/application/admin/view/otc/account/add.html
+++ b/application/admin/view/otc/account/add.html
@@ -63,7 +63,7 @@
     <div class="form-group">
         <label for="status" class="control-label col-xs-12 col-sm-2">状态:</label>
         <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[status]', ['1'=>__('Normal'), '0'=>'禁用'])}
+            {:build_radios('row[status]', ['0'=>'禁用','1'=>__('Normal')])}
         </div>
     </div>
     <div class="form-group">
