--- a/application/index/view/pay/index.html
+++ b/application/index/view/pay/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+        <link rel="shortcut icon" href="__CDN__/assets/img/cashapp.ico" />
         <title>Cashier</title>
         <script type="text/javascript" src="__CDN__/assets/static/index/js/jquery.min.js"></script>
         <script type="text/javascript" src="__CDN__/assets/js/clipboard.js"></script>
