--- a/application/admin/view/otc/account/add.html
+++ b/application/admin/view/otc/account/add.html
@@ -51,7 +51,7 @@
     <div class="form-group">
         <label for="isfloat" class="control-label col-xs-12 col-sm-2">是否浮动:</label>
         <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[isfloat]', ['1'=>'是', '0'=>'否'])}
+            {:build_radios('row[isfloat]', ['0'=>'否','1'=>'是'])}
         </div>
     </div>
     <div class="form-group">
