--- a/application/index/view/pay/index.html
+++ b/application/index/view/pay/index.html
@@ -111,9 +111,9 @@
                         <div style="width:55%;line-height: 30px;">
                             <div style="font-size: 16px;font-weight: bold;" id="upi1">{$order.ext_data}</div>
                         </div>
-                        <div style="width:20%;line-height: 30px;text-align: center;">
+                        <!-- <div style="width:20%;line-height: 30px;text-align: center;">
                             <button class="addrCopy" onclick="copyUrl('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#upi1">Copy</button>
-                        </div>
+                        </div> -->
                     </div>
                     <div style="flex-direction: row;display: flex;height: 40px;">
                         <div style="width:25%;line-height: 30px;color: rgb(0, 214, 79)">
