--- a/application/index/view/pay/index.html
+++ b/application/index/view/pay/index.html
@@ -157,22 +157,28 @@
                     <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 1</div>
                         <div style="border-bottom: 1px #dedede solid;padding-bottom: 5px;">
-                            Copy and paste your
+                            Click the go to pay button
                         </div>
                     </div>
                     <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 2</div>
                         <div style="">
-                            Enter the amount you wish to process in the payment
+                            Direct paste at add a note
                         </div>
                     </div>
-
-                    <!-- <div style="margin-top: 5px;">
+                    <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 3</div>
                         <div style="">
                             Enter the amount you wish to process in the payment
                         </div>
-                    </div> -->
+                    </div>
+
+                    <div style="margin-top: 5px;">
+                        <div style="color:red;font-size: 12px;font-weight: bold;">Step 4</div>
+                        <div style="">
+                            Click the pay button
+                        </div>
+                    </div>
                     <div style="clear: both;"></div>
                 </div>
                 <div style="text-align: center;margin-top: 20px;color:white;font-size: 12px;">
