--- a/application/index/view/pay/index.html
+++ b/application/index/view/pay/index.html
@@ -162,13 +162,13 @@
                     </div>
                     <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 2</div>
-                        <div style="">
+                        <div style="border-bottom: 1px #dedede solid;padding-bottom: 5px;">
                             Direct paste at add a note
                         </div>
                     </div>
                     <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 3</div>
-                        <div style="">
+                        <div style="border-bottom: 1px #dedede solid;padding-bottom: 5px;">
                             Enter the amount you wish to process in the payment
                         </div>
                     </div>
