--- a/application/admin/view/order/collection/index.html
+++ b/application/admin/view/order/collection/index.html
@@ -5,9 +5,10 @@
                 <span class="extend">
                     <button type="button" class="btn btn-primary">交易金额：<span id="money">0</span></button>
                     <button type="button" class="btn btn-success">交易笔数：<span id="total">0</span></button>
-                    <button type="button" class="btn btn-default">成功笔数：<span id="success_total">0</span></button>
+                    <button type="button" class="btn btn-primary">成功笔数：<span id="success_total">0</span></button>
                     <button type="button" class="btn btn-info">成功金额：<span id="price">0</span></button>
-                    <button type="button" class="btn btn-warning">交易手续费：<span id="tax">0</span></button>
+                    <button type="button" class="btn btn-warning">商户手续费：<span id="tax">0</span></button>
+                    <button type="button" class="btn btn-success">三方手续费：<span id="three_tax">0</span></button>
                     <button type="button" class="btn btn-danger">成功率：<span id="rate">0</span></button>
                 </span>
             </em>
