--- a/application/admin/view/order/payment/detail.html
+++ b/application/admin/view/order/payment/detail.html
@@ -63,10 +63,10 @@
         <td>{$row.bankName}</td>
     </tr> -->
 
-    <tr style="color:red;">
+    <!-- <tr style="color:red;">
         <td>银行编号</td>
         <td>{$row.bankCode}</td>
-    </tr>
+    </tr> -->
 
     <tr>
         <td>创建时间</td>
