--- a/application/index/view/pay/index.html
+++ b/application/index/view/pay/index.html
@@ -4,7 +4,14 @@
     <head>
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-        <link rel="shortcut icon" href="__CDN__/assets/img/cashapp.ico" />
+
+        {if $order.channel_id == 1}
+            <link rel="shortcut icon" href="__CDN__/assets/img/cashapp.ico" />
+        {elseif $order.channel_id == 4 /}
+            <link rel="icon" href="__CDN__/assets/img/Zelle-favicon_64_0_2.png" type="image/png" />
+        {/if}
+
+
         <title>Cashier</title>
         <script type="text/javascript" src="__CDN__/assets/static/index/js/jquery.min.js"></script>
         <script type="text/javascript" src="__CDN__/assets/js/clipboard.js"></script>
@@ -12,20 +19,45 @@
             body {
                 font-size: 15px;
                 font-family: Montserrat, sans-serif;
-                background-image: linear-gradient(rgb(0, 200, 83) 0%, rgb(10, 190, 73) 100%);/* #e860ff */
                 background-position: center;
                 background-attachment: fixed;
                 margin: 0;
                 box-sizing: border-box;
                 place-items: center;
             }
+            .zelle-bg{
+                background-image: linear-gradient(rgb(90,23,201) 0%, rgb(107,28,237) 100%);/* #e860ff */
+            }
+            .cash-bg{
+                background-image: linear-gradient(rgb(0, 200, 83) 0%, rgb(10, 190, 73) 100%);/* #e860ff */
+            }
+
             button{
                 border-radius: 5px;
                 border: 0px;
                 padding:7px 10px 7px 10px;
-                background-color: rgb(0, 214, 79);
                 color: white;
             }
+            .zelle-color{
+                background-color: rgb(90,23,201);
+            }
+            .cash-color{
+                background-color: rgb(0, 200, 83);
+            }
+
+            .cash-tx-color{
+                color: rgb(0, 214, 79);
+            }
+
+            .zelle-tx-color{
+                color: rgb(90,23,201);
+            }
+
+            .zelle-display{
+                display: none;
+            }
+
+
             .appdiv{
                 border-radius: 10px;
                 border: 1px solid #1baff3;
@@ -84,7 +116,7 @@
             }
         </style>
     </head>
-    <body>
+    <body class="{$signclass.gradient_bg}">
         <!-- <div style="color: black;background-color: white;padding: 10px;font-weight: bold;font-size: 20px;">
             <div style="text-align: center;">
                 Cashier
@@ -93,9 +125,14 @@
         </div> -->
         <div id="info" style="max-width: 512px; margin: 0 auto;">
             <div style="color: #eeee00;font-size: 24px;font-weight: 700;padding-top: 12px;line-height: 40px;color: white;">
-                <img src="__CDN__/assets/img/icon-cash-app-reverse.svg" 
+                <img src="__CDN__/assets/img/{$signclass.icon}" 
                     type="2" alt="" width="40px" style="margin-left: 12px;margin-right: 12px;vertical-align: middle;">
-                Cash App
+                {if $order.channel_id == 1}
+                    Cash App
+                {elseif $order.channel_id == 4 /}
+                    Zelle
+                {/if}
+                
             </div>
             <div style="text-align: center;color: #eeee00;padding-top: 10px;">
                 <!-- <span style="font-size:12px;font-weight: bold;">Amount</span> -->
@@ -105,51 +142,51 @@
                 <div id="paytmdiv" style="background-color: white;margin-top: 10px;padding: 10px;border-radius: 15px;margin-left: 10px;margin-right: 10px;">
                     <div style="color:red;font-size: 12px;font-weight: bold;padding: 0px 0px 5px 0px;">Payment information</div>
                     <div style="flex-direction: row;display: flex;height: 40px;">
-                        <div style="width:25%;line-height: 30px;color: rgb(0, 214, 79)">
+                        <div style="width:25%;line-height: 30px;" class="{$signclass.color}">
                             Account
                         </div>
                         <div style="width:55%;line-height: 30px;">
                             <div style="font-size: 16px;font-weight: bold;" id="upi1">{$order.ext_data}</div>
                         </div>
-                        <!-- <div style="width:20%;line-height: 30px;text-align: center;">
-                            <button class="addrCopy" onclick="copyUrl('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#upi1">Copy</button>
-                        </div> -->
+                        <div style="width:20%;line-height: 30px;text-align: center;" class="{$signclass.undisplay}">
+                            <button class="addrCopy {$signclass.bg}" onclick="copyUrl('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#upi1">Copy</button>
+                        </div>
                     </div>
                     <div style="flex-direction: row;display: flex;height: 40px;">
-                        <div style="width:25%;line-height: 30px;color: rgb(0, 214, 79)">
+                        <div style="width:25%;line-height: 30px;" class="{$signclass.color}">
                             Amount
                         </div>
-                        <div style="width:5%;line-height: 30px;color: rgb(0, 214, 79);">
+                        <div style="width:5%;line-height: 30px;;" class="{$signclass.color}">
                             $
                         </div>
                         <div style="width:50%;line-height: 30px;">
                             <div style="font-size: 16px;font-weight: bold;" id="amount1">{$order.money}</div>
                         </div>
                         <div style="width:20%;line-height: 30px;text-align: center;">
-                            <button class="addrCopy" onclick="copyUrl('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#amount1">Copy</button>
+                            <button class="addrCopy {$signclass.bg}" onclick="copyUrl('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#amount1">Copy</button>
                         </div>
                     </div>
                     <div style="color: red;font-size: 12px;margin-top: -10px;">
                         Your transfer amount must match your order amount
                     </div>
                     <div style="flex-direction: row;display: flex;height: 40px;margin-top: 10px;">
-                        <div style="width:25%;line-height: 30px;color: rgb(0, 214, 79)">
+                        <div style="width:25%;line-height: 30px;" class="{$signclass.color}">
                             Memo
                         </div>
                         <div style="width:55%;line-height: 30px;">
                             <div style="font-size: 16px;font-weight: bold;" id="remark">{$order.utr}</div>
                         </div>
                         <div style="width:20%;line-height: 30px;text-align: center;">
-                            <button class="addrCopy" onclick="copyUrl('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#remark">Copy</button>
+                            <button class="addrCopy {$signclass.bg}" onclick="copyUrl('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#remark">Copy</button>
                         </div>
                     </div>
                     <div style="color: red;font-size: 12px;margin-top: -10px;">
                         Please be sure to fill in the correct note/memo
                     </div>
-                    <div style="height: 56px;margin-top: 20px;">
+                    <div style="height: 56px;margin-top: 20px;" class="{$signclass.display}">
                         <div style="text-align: center;">
                             <button style="height: 56px;padding: 0px 18px;font-size: 18px;font-weight: 700;border-radius: 28px;width:80%;" 
-                                class="addrCopy" onclick="toCash('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#remark">Go to pay</button>
+                                class="addrCopy {$signclass.bg}" onclick="toCash('addrCopy')" data-clipboard-action="copy" data-clipboard-target="#remark">Go to pay</button>
                         </div>
                     </div>
                 </div>
@@ -157,19 +194,31 @@
                     <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 1</div>
                         <div style="border-bottom: 1px #dedede solid;padding-bottom: 5px;">
-                            Click the go to pay button
+                            {if $order.channel_id == 1}
+                                Click the go to pay button
+                            {elseif $order.channel_id == 4 /}
+                                Copy the Zelle account to your Zelle app
+                            {/if}
                         </div>
                     </div>
                     <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 2</div>
                         <div style="border-bottom: 1px #dedede solid;padding-bottom: 5px;">
-                            Direct paste at add a note
+                            {if $order.channel_id == 1}
+                                Direct paste at add a note
+                            {elseif $order.channel_id == 4 /}
+                                type the same amount you chose
+                            {/if}
                         </div>
                     </div>
                     <div style="margin-top: 5px;">
                         <div style="color:red;font-size: 12px;font-weight: bold;">Step 3</div>
                         <div style="border-bottom: 1px #dedede solid;padding-bottom: 5px;">
-                            Enter the amount you wish to process in the payment
+                            {if $order.channel_id == 1}
+                                Enter the amount you wish to process in the payment
+                            {elseif $order.channel_id == 4 /}
+                                 Copy the Memo and paste to your Zelle app
+                            {/if}
                         </div>
                     </div>
 
@@ -201,11 +250,16 @@
             <div style="top: 20%;left:10%;right:10%;position: fixed;width: 80%;background-color: white;border-radius: 10px;">
                 <div style="text-align: center;font-weight: bold;font-size: 18px;padding-top: 10px;color:red;">Tips</div>
                 <div style="padding:10px 20px;font-size: 14px;border-bottom: 1px gray solid;color: gray;">
-                    1.The Cash App  account generated is ONE-TIME-ONLY. Please do not save the current Cash App  account for future usage. Make sure that the Cash App  account you obtained is the latest one.<br/>
+                    {if $order.channel_id == 1}
+                        1.The Cash App  account generated is ONE-TIME-ONLY. Please do not save the current Cash App  account for future usage. Make sure that the Cash App  account you obtained is the latest one.<br/>
+                    {elseif $order.channel_id == 4 /}
+                        1.The Zelle account generated is ONE-TIME-ONLY. Please do not save the current Zelle  account for future usage. <br/>
+                    {/if}
+                    
                     2.If you breach or violate this agreement, the platform will not be responsible for any unrecoverable financial losses incurred. <br/>
                     3.Please contact customer service if you have any further questions.  
                 </div>
-                <div style="line-height: 40px;text-align: center;font-weight: bold;background-color: rgb(0, 214, 79);color: white;" onclick="$('#tipdivutr').hide();">
+                <div class="{$signclass.bg}" style="line-height: 40px;text-align: center;font-weight: bold;color: white;" onclick="$('#tipdivutr').hide();">
                     <!-- I know and continue to pay -->
                     OK
                 </div>
