--- a/application/admin/view/system/balance/index.html
+++ b/application/admin/view/system/balance/index.html
@@ -4,7 +4,7 @@
         <div class="panel-lead">
             <em>
                 <span class="extend">
-                    <button type="button" class="btn btn-primary">当前可用收益：<span id="money">0</span></button>
+                    <button type="button" class="btn btn-primary">系统手续费：<span id="money">0</span></button>
                     <button id="operate" class="btn btn-warning btn-list btn-operate" title="操作"><i class="fa fa-list"></i> 操作</button>
                 </span>
             </em>
