--- a/application/admin/view/system/balance/index.html
+++ b/application/admin/view/system/balance/index.html
@@ -10,7 +10,7 @@
             </em>
         </div>
     </div>
-    <div class="panel-heading"><div class="panel-lead"><em>系统收益明细</em></div></div>
+    <div class="panel-heading"><div class="panel-lead"><em>手续费明细</em></div></div>
 
     <div class="panel-body">
         <div id="myTabContent" class="tab-content">
