--- a/application/index/view/upay/index.html
+++ b/application/index/view/upay/index.html
@@ -133,7 +133,7 @@
             maxTime--;
             if(maxTime < 0){
                 clearInterval(timeId);
-                // window.location.href = "{$errorUrl}";
+                window.location.href = "{$errorUrl}";
             }
         }
 
